--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "export": "next export -o dist",
     "start": "next start"
   },
   "author": "Micah Roberson",
   "license": "MIT",
   "dependencies": {
-    "next": "9.1.3",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "next": "9.4.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
